After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743434 - online-accounts: Dialogs don't use header bar
online-accounts: Dialogs don't use header bar
Status: RESOLVED FIXED
Product: gnome-initial-setup
Classification: Applications
Component: general
3.14.x
Other All
: Normal normal
: ---
Assigned To: GNOME Initial Setup maintainer(s)
GNOME Initial Setup maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-01-24 07:13 UTC by Debarshi Ray
Modified: 2015-02-19 22:07 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Debarshi Ray 2015-01-24 07:13:37 UTC
I just finished installing Fedora 21. In the Online Accounts page the dialogs were not using a header bar, and particularly the dialog for adding an ownCloud account ended up having two cancel buttons.