goa: Improve account dialogs

We were adding a redundant cancel button, and were not using
header bars. Fix both.

https://bugzilla.gnome.org/show_bug.cgi?id=743434