gnome-initial-setup/pages/goa/gis-goa-page.c
@@ -86,9 +86,9 @@ add_account_to_provider (ProviderWidget *provider_widget)
 
   dialog = gtk_dialog_new_with_buttons (_("Add Account"),
                                         parent,
-                                        GTK_DIALOG_MODAL | GTK_DIALOG_DESTROY_WITH_PARENT,
-                                        _("Cancel"),
-                                        GTK_RESPONSE_CANCEL,
+                                        GTK_DIALOG_MODAL
+                                        | GTK_DIALOG_DESTROY_WITH_PARENT
+                                        | GTK_DIALOG_USE_HEADER_BAR,
                                         NULL);
 
   goa_provider_add_account (provider_widget->provider,
